--- a/static/tetris.html
+++ b/static/tetris.html
@@ -1,7 +1,16 @@
 <html>
+    <head>
+        <title>Tetris</title>
+    </head>
     <body>
     <h3 style="text-align: center;"> Tetris </h3>
+    <form>
+        Your name:<br>
+        <input type="text" name="name", id="name">
+        <button type="button" id="myBtn">Submit</button>
+    </form>
     <script src="p5.js"></script>
-    <script src="tetris.js"></script>
+    <script src="tetris.js"></script>  
     </body>
+
 </html>
