--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
   </head>
   <h1 style="text-align: center; color: firebrick;">Raymond Home</h1>
   <ul>
-      <li><a class="active"href="default.asp">Home</a></li>
+      <li><a class="active"href="index.html">Home</a></li>
       <li><a href="games/games.html">Games</a></li>
       <li><a href="contact.asp">Contact</a></li>
       <li><a href="about.asp">About</a></li>
