--- a/static/games/games.html
+++ b/static/games/games.html
@@ -1,7 +1,47 @@
 <html>
+  <head>
+    <title>Raymond's website</title>
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #ffffff;
+      }
+
+      li {
+        float: left;
+      }
+
+      li a {
+        display: block;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+
+      /* Change the link color to #111 (black) on hover */
+      li a:hover {
+        background-color: yellow;
+      }
+      .active {
+        background-color: #4CAF50;
+      }
+    </style>
+  </head>
+  <h1 style="text-align: center; color: firebrick;">Raymond Home</h1>
+  <ul>
+      <li><a class="active"href="/index.html">Home</a></li>
+      <li><a href="/games/games.html">Games</a></li>
+      <li><a href="contact.asp">Contact</a></li>
+      <li><a href="about.asp">About</a></li>
+  </ul>
+  <br>
   <body>
-      <a href="demo.html"> demo </a>
-      <br>
-      <a href="tetris.html"> tetris </a>
-  </body>
+    <a href="demo.html"> demo </a>
+    <br>
+    <a href="tetris.html"> tetris </a>
+</body>
 </html>
