--- a/static/games/games.html
+++ b/static/games/games.html
@@ -1,37 +1,8 @@
 <html>
   <head>
-    <title>Raymond's website</title>
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #ffffff;
-      }
-
-      li {
-        float: left;
-      }
-
-      li a {
-        display: block;
-        color: black;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      /* Change the link color to #111 (black) on hover */
-      li a:hover {
-        background-color: yellow;
-      }
-      .active {
-        background-color: #4CAF50;
-      }
-    </style>
+    <title>Games</title>
   </head>
-  <h1 style="text-align: center; color: firebrick;">Raymond Home</h1>
+  <h1 class="header">Games</h1>
   <ul>
       <li><a class="active"href="/index.html">Home</a></li>
       <li><a href="/games/games.html">Games</a></li>
@@ -44,4 +15,42 @@
     <br>
     <a href="tetris.html"> tetris </a>
 </body>
+
+<style>
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #336699;
+  color: black;
+  font-size: 30px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #ffffff;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: yellow;
+}
+.active {
+  background-color: #4CAF50;
+      }
+
+</style>
 </html>
