--- a/static/games/tetris.html
+++ b/static/games/tetris.html
@@ -2,8 +2,14 @@
     <head>
         <title>Tetris</title>
     </head>
+    <h1 class="header">Tetris</h1>
+    <ul>
+        <li><a class="active"href="/index.html">Home</a></li>
+        <li><a href="/games/games.html">Games</a></li>
+        <li><a href="contact.asp">Contact</a></li>
+        <li><a href="about.asp">About</a></li>
+    </ul>
     <body>
-    <h3 style="text-align: center;"> Tetris </h3>
     <form>
         Your name:<br>
         <input type="text" name="name", id="name">
@@ -12,5 +18,48 @@
     <script src="p5.js"></script>
     <script src="tetris.js"></script>  
     </body>
+    <style>
+    form{
+        margin: 0;
+        display: flex;
+      
+        /* This centers our sketch horizontally. */
+        justify-content: center;
+    }
+    .header {
+        padding: 60px;
+        text-align: center;
+        background: #336699;
+        color: black;
+        font-size: 30px;
+        }
+        ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #ffffff;
+        }
+
+        li {
+        float: left;
+        }
+
+        li a {
+        display: block;
+        color: black;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        }
+
+        /* Change the link color to #111 (black) on hover */
+        li a:hover {
+        background-color: yellow;
+        }
+        .active {
+        background-color: #4CAF50;
+    }
+    </style>
 
 </html>
