Some bugs fixed

--- a/static/about.html
+++ b/static/about.html
@@ -11,6 +11,6 @@
     <li><a href="/about.html">About</a></li>
   </ul>
   <body>
-    <p title="I'm a tooltip">My first paragraph.</p>
+    <p title="I'm a tooltip">This is a web app built by Yizhi Sun.</p>
   </body>
 </html>
