--- a/static/games/demo.html
+++ b/static/games/demo.html
@@ -1,7 +1,18 @@
 <html>
-    <body>
-    <h3 style="text-align: center;"> Demo </h3>
-    <script src="p5.js"></script>
-    <script src="graph.js"></script>
+  <head>
+    <title>Demo</title>
+    <link rel="stylesheet" href="../styles.css">
+  </head>
+  <h1 class="header">Demo</h1>
+  <ul>
+      <li><a class="active"href="/index.html">Home</a></li>
+      <li><a href="/games/games.html">Games</a></li>
+      <li><a href="/algorithms/algorithms.html">algorithms visualiztion</a></li>
+      <li><a href="/about.html">About</a></li>
+  </ul>
+  <br>
+  <body>
+      <script src="p5.js"></script>
+      <script src="graph.js"></script>
     </body>
 </html>
