--- a/static/algorithms/algorithms.html
+++ b/static/algorithms/algorithms.html
@@ -1,43 +1,16 @@
 <html>
   <head>
-    <title>Raymond's website</title>
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #ffffff;
-      }
-
-      li {
-        float: left;
-      }
-
-      li a {
-        display: block;
-        color: black;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      /* Change the link color to #111 (black) on hover */
-      li a:hover {
-        background-color: yellow;
-      }
-      .active {
-        background-color: #4CAF50;
-      }
-    </style>
+    <title>algorithms visualiztion</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
-  <h1 style="text-align: center; color: firebrick;">Raymond Home</h1>
+  <h1 class="header">algorithms visualiztion</h1>
   <ul>
       <li><a class="active"href="/index.html">Home</a></li>
       <li><a href="/games/games.html">Games</a></li>
       <li><a href="/algorithms/algorithms.html">algorithms visualiztion</a></li>
-      <li><a href="about.asp">About</a></li>
+      <li><a href="/about.html">About</a></li>
   </ul>
+  <br>
   <body>
     <div><a href="/algorithms/sorting.html"> sorting </a></div>
   </body>
