--- a/static/algorithms/sorting.html
+++ b/static/algorithms/sorting.html
@@ -1,44 +1,20 @@
 <html>
   <head>
     <title>Raymond's website</title>
-    <style>
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #ffffff;
-      }
-
-      li {
-        float: left;
-      }
-
-      li a {
-        display: block;
-        color: black;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-
-      /* Change the link color to #111 (black) on hover */
-      li a:hover {
-        background-color: yellow;
-      }
-      .active {
-        background-color: #4CAF50;
-      }
-    </style>
+    <link rel="stylesheet" href="../styles.css">
   </head>
-  <h1 style="text-align: center; color: firebrick;">Raymond Home</h1>
+  <h1 class="header">Raymond Home</h1>
   <ul>
       <li><a class="active"href="/index.html">Home</a></li>
       <li><a href="/games/games.html">Games</a></li>
       <li><a href="/algorithms/algorithms.html">algorithms visualiztion</a></li>
-      <li><a href="about.asp">About</a></li>
+      <li><a href="/about.html">About</a></li>
   </ul>
   <body>
+    <br>
+    <button onclick="start()">Start</button>
+    <button onclick="reset()"> Reset </button>
+    <br>
     <script src="/p5/p5.js"></script>
     <script src="sorting.js"></script>  
   </body>
