--- a/static/games/tetris.html
+++ b/static/games/tetris.html
@@ -7,8 +7,8 @@
     <ul>
         <li><a class="active"href="/index.html">Home</a></li>
         <li><a href="/games/games.html">Games</a></li>
-        <li><a href="contact.asp">Contact</a></li>
-        <li><a href="about.asp">About</a></li>
+        <li><a href="/algorithms/algorithms.html">algorithms visualiztion</a></li>
+        <li><a href="/about.html">About</a></li>
     </ul>
     <body>
     <form>
