--- a/static/games/tetris.html
+++ b/static/games/tetris.html
@@ -16,7 +16,7 @@
         <input type="text" name="name", id="name">
         <button type="button" id="myBtn">Submit</button>
     </form>
-    <!-- <p id="score"> Your score is </p> -->
+    <p> Your score is <var id="score"> 0 </var></p>
     <script src="p5.js"></script>
     <script src="tetris.js"></script>  
     </body>
